data/derived/comb/progs/unify/prog6852.ml.out
Characters 118-121:
  List.fold_left [f] base args;;
                 ^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c -> 'b
